added histogram module, restructured dictionary words and rearrange modules

--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,12 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+#myfiles
+sherlock_holmes.txt
+book.txt
+example.txt
+example1.txt
+
 # End of https://www.gitignore.io/api/macos,python
+
+
